@@ -9,6 +9,9 @@ update-manager (1:0.90.1) intrepid; urgency=low
   * UpdateManager/Common/utils.py:
     - fix inhibit path (LP: #140754), thanks to 
       Andreas Dalsgaard
+  * DistUpgrade/DistUpgradeViewText.py:
+    - use sensible-pager first and fallback to "more" if
+      that is not available (thanks to Mithrandir)
 
  --
 
